# cat-task-manager

./: AGENTS.md  Cargo.toml  README.ja.md  README.md  _config.yml  config.example.toml  for_local.bat  tasks.example.md
src/: app.rs  auto_free_time.rs  cli.rs  clock.rs  editor.rs  event.rs  git_snapshot.rs  history_stats.rs  logging.rs  main.rs  self_update.rs  startup_git.rs  storage.rs  task_diff.rs  task_runtime.rs  terminal.rs  ui.rs
src/app/: actions.rs  blink.rs  free_time.rs  model.rs  stats.rs  tests.rs
src/app/tests/: view.rs
src/event/: tests.rs
src/history_stats/: recent.rs  tests.rs  typical.rs
src/storage/: config.rs  paths.rs  records.rs  tasks.rs
src/storage/config/: auto_free_time.rs  tests.rs  ui.rs
src/storage/tasks/: parser.rs  tests.rs
src/storage/tasks/tests/: write.rs
src/ui/: duration.rs  stats.rs  tasks.rs  tests.rs
